# Machi-Koro

./: CMakeLists.txt  Card.cpp  Card.hpp  main  main.cpp  readme
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: Bank.cpp.4E436686E4CC680B.idx  Bank.hpp.B1E91353788EC5BE.idx  Board.h.930AF41A3606FC08.idx  Card.hpp.B7A5918023953FBE.idx  Deck.cpp.05F039FECFE7B0FA.idx  (+208 more)
Bank/: Bank.cpp  Bank.hpp  Wallet.hpp
Board/: Board.cpp  Board.h  Deck.h  DeluxeBoard.h  GreenVallerBoard.cpp  GreenValleyBoard.cpp  GreenValleyBoard.h  HarborBoard.h  StandardBoard.h
Board/Deck/: Deck.cpp  Deck.h
Board/Deluxe/: DeluxeBoard.cpp  DeluxeBoard.h
Board/Harbor/: HarborBoard.cpp  HarborBoard.h
Board/Standard/: StandardBoard.cpp  StandardBoard.h
Card/: Card.cpp  Card.hpp
Card/Establishment/: Establishment.cpp  Establishment.h
Card/Landmark/: Landmark.cpp  Landmark.h
Collection/: Collection.cpp  Collection.h  Collection_GreenValley.cpp  Collection_GreenValley.h  Collection_deluxe.cpp  Collection_deluxe.h  Collection_harbor.cpp  Collection_harbor.h  Collection_standard.cpp  Collection_standard.h
Dice/: Dice.cpp  Dice.h
Dies/: Dies.cpp  Dies.h
Game/: DeluxeExpansion.cpp  DeluxeExpansion.h  Game.cpp  Game.h  GreenValeyExpansion.cpp  GreenValeyExpansion.h  GreenValleyExpansion.cpp  GreenValleyExpansion.h  HarborExpansion.cpp  HarborExpansion.h  StandardExpansion.cpp  StandardExpansion.h
Hand/: Hand.cpp  Hand.hpp
MachiKoro-UI-App/: CMakeCache.txt  CMakeLists 2.txt  CMakeLists.txt  MachiKoro-UI-App.pro  cmake_install.cmake  game.ui  gameinterface.cpp  gameinterface.h  gameinterface.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.css
Player/: EasyLevel.hpp  Humain.hpp  IA.hpp  Player.cpp  Player.hpp  Strategy.hpp
Player/Hand/: Hand.cpp  Hand.hpp
Player/Human/: Human.cpp  Human.h
Player/IA/: IA.cpp  IA.hpp
Player/IA/Strategy/: Strategy.cpp  Strategy.h
Player/Strategy/: Strategy.cpp  Strategy.hpp
UTILS/: Enums.cpp  Enums.hpp
Wallet/: Wallet.hpp
build-MachiKoro-UI-App-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-MachiKoro-UI-App-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-MachiKoro-UI-App-Qt_6_4_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  MachiKoro  Makefile  build.ninja  cmake_install.cmake  moc_NamesWindow.cpp  moc_gameinterface.cpp  moc_mainwindow.cpp  qtcsettings.cmake  style.css  ui_NamesWindow.h  ui_game.h  ui_gameinterface.h  ui_mainwindow.h
build-MachiKoro-UI-App-Qt_6_4_1_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-appUI/: Makefile  moc_gameinterface.cpp  moc_lblMouse.cpp  moc_mainwindow.cpp  ui_game.h  ui_gameinterface.h  ui_mainwindow.h
build-appUI/.qtc_clangd/: compile_commands.json
build-appUI/MachiKoro-UI-App.app.dSYM/Contents/: Info.plist
build-appUI/MachiKoro-UI-App.app/Contents/: Info.plist
(+658 files in other folders)
