cmake_minimum_required(VERSION 3.23)
project(MachiKoro)

set(CMAKE_CXX_STANDARD 14)

include_directories(Bank)
include_directories(Board)
include_directories(Board/Deck)
include_directories(Board/Harbor)
include_directories(Board/Standard)
include_directories(Card)
include_directories(Card/Establishment)
include_directories(Card/Landmark)
include_directories(Collection)
include_directories(Dice)
include_directories(Game)
include_directories(Player)
include_directories(Player/Hand)
include_directories(Player/IA)
include_directories(UTILS)

add_executable(MachiKoro
        Bank/Bank.cpp
        Bank/Bank.hpp
        Bank/Wallet.hpp
        Board/Deck/Deck.cpp
        Board/Deck/Deck.h
        Board/Harbor/HarborBoard.h
        Board/Standard/StandardBoard.cpp
        Board/Standard/StandardBoard.h
        Board/Board.cpp
        Board/Board.h
        Board/DeluxeBoard.h
        Board/GreenValleyBoard.cpp
        Board/GreenValleyBoard.h
        Card/Establishment/Establishment.cpp
        Card/Establishment/Establishment.h
        Card/Landmark/Landmark.cpp
        Card/Landmark/Landmark.h
        Card/Card.hpp
        Collection/Collection.cpp
        Collection/Collection.h
        Dice/Dice.cpp
        Dice/Dice.h
        Game/DeluxeExpansion.cpp
        Game/DeluxeExpansion.h
        Game/Game.cpp
        Game/Game.h
        Game/GreenValleyExpansion.cpp
        Game/GreenValleyExpansion.h
        Game/HarborExpansion.cpp
        Game/HarborExpansion.h
        Game/StandardExpansion.cpp
        Game/StandardExpansion.h
        Player/Hand/Hand.cpp
        Player/Hand/Hand.hpp
        Player/IA/IA.cpp
        Player/IA/IA.hpp
        Player/Player.cpp
        Player/Player.hpp
        UTILS/Enums.cpp
        UTILS/Enums.hpp
        main.cpp)
